# uptime-kuma-gitops

./: Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: push_image.yaml
examples/: config.yaml  docker-compose.yaml
src/: config.py  data.py  logger.py  main.py  monitors.py  notifications.py  setup.py  status_page.py  util.py
